# dynamic-test-generation

./: .gitignore  README.md  pyproject.toml  requirements.txt  smoke.yml
smoke_diff_cli/: cli.py  generator.py  loader.py
smoke_diff_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: cli.py  diff_engine.py  generator.py  loader.py
tests/: test_smoke.py
